--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
 </head>
 <body>
     <header>
-         
+         <nav>
+            <div>
+                <ul>
+                    <li><a href="Main page"></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+         </nav>
     </header>
 </body>
 </html>
