--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
          <nav>
             <div>
                 <ul>
+                    <li><a href="#"></a></li>
                     <li>Main page</li>
                     <li>Benefits</li>
                     <li>Advantages</li>
