--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <header>
-         <nav>
-            <div>
+        <div>
+            <nav>
                 <ul>
-                    <li><a href="#"></a></li>
+                    <li><a href="index.html"></a></li>
                     <li>Main page</li>
                     <li>Benefits</li>
                     <li>Advantages</li>
@@ -24,8 +24,88 @@
                     <li>Contacts</li>
                     <li>Order</li>
                 </ul>
-            </div>
-         </nav>
+            </nav>
+            <ul>
+                <li>
+                    <a href="#">Ua Eng</a>
+                </li>
+            </ul>
+       </div>  
     </header>
+    <main>
+     <section>
+        <p>C&R</p>
+        <h1>ColoRawe</h1>
+        <p>Your dream Nike<p>
+        <p>On this site you can find custom Nike sneakers of your dreams. The original company caт`t create such beautiful sneakers as we do. Good luck finding your way in the world of custom sneakers.</p>
+        <button type="button">Buy my Nike</button>
+    </section>
+    <section>
+        <ul>
+            <li>
+              <img src="" alt="">
+              <h2>Premium Quality</h2>
+            </li>
+            <li>
+              <img src="" alt="">
+              <h2>Indelible paint</h2>
+            </li>
+            <li>
+              <img src="" alt="">
+              <h2>Fast shipping</h2>
+            </li>
+        </ul>
+    </section>
+     </div>
+      <section>
+        <div>
+            <h2>Reviews</h2>
+            <ul>
+                <li>
+                   <p>Sneakers are very 
+                    comfortable and well 
+                    painted, nothing has 
+                    worn off in a year.</p>
+                    <p>25.11</p>
+                    <h5>John Teylor</h5>
+                    <p>With us from 2018</p>
+                </li>
+                <li>
+                    <p>I'm very happy with this color scheme.
+                        They match all my clothes.</p>
+                    <p>05.01</p>
+                    <h5>Elizabeth Garsia</h5>
+                    <p>With us from 2020</p>
+                </li>
+                <li>
+                    <p>Just right if you need to go to a party.
+                        I use them actively, the paint is super.</p>
+                    <p>18.06</p>
+                    <h5>Tom Maquare</h5>
+                    <p>With us from 2019</p>
+                </li>
+            </ul>
+        </div>
+      </section>
+      <section>
+        <h2>Order</h2>
+        <ul>
+            <li><h4>Write your email</h4>
+                <p>Confirm</p>
+            </li>
+            <li>
+             <h4>Your Country</h4>
+            </li>
+            <li>
+              <h4>You City</h4>
+            </li>
+            <li>
+                <h4>Your Adress</h4>
+            </li>
+        </ul>
+        <button type="button">Order my Nike</button>
+      </section>
+    </main>
+    
 </body>
 </html>
