--- a/index.html
+++ b/index.html
@@ -106,6 +106,21 @@
         <button type="button">Order my Nike</button>
       </section>
     </main>
-    
+    <footer>
+        <div>
+            <ul>
+            <li>Have a question?</li>
+            <li>Have a proposal for cooperation?</li>
+            <li>Advertising questions?</li>
+            </ul>
+            <address>
+                <div>
+                    <a href="ColoRawe_support@gmail.com">ColoRawe_support@gmail.com</a>
+                    <a href="ColoRawe_Cooperation@gmail.com">ColoRawe_Cooperation@gmail.com</a>
+                    <a href="ColoRawe_Advertising@gmail.com">ColoRawe_Advertising@gmail.com</a>
+                </div>
+            </address>
+        </div>
+    </footer>
 </body>
 </html>
