--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div>
-            <nav>
-                <ul>
+    <header class="header">
+        <div class="div-list">
+            <nav class="nav-list">
+                <ul class="header-list">
                     <li><a href="index.html"></a></li>
                     <li>Main page</li>
                     <li>Benefits</li>
@@ -25,23 +25,23 @@
                     <li>Order</li>
                 </ul>
             </nav>
-            <ul>
+            <ul class="language-list">
                 <li>
                     <a href="#">Ua Eng</a>
                 </li>
             </ul>
        </div>  
     </header>
-    <main>
-     <section>
+    <main class="main">
+     <section class="section-colorawe">
         <p>C&R</p>
         <h1>ColoRawe</h1>
         <p>Your dream Nike<p>
         <p>On this site you can find custom Nike sneakers of your dreams. The original company caт`t create such beautiful sneakers as we do. Good luck finding your way in the world of custom sneakers.</p>
         <button type="button">Buy my Nike</button>
     </section>
-    <section>
-        <ul>
+    <section class="section-quality">
+        <ul class="list-quality">
             <li>
               <img src="" alt="">
               <h2>Premium Quality</h2>
@@ -57,10 +57,10 @@
         </ul>
     </section>
      </div>
-      <section>
+      <section class="section-reviews">
         <div>
-            <h2>Reviews</h2>
-            <ul>
+            <h2 class="name-reviews">Reviews</h2>
+            <ul class="section-reviews">
                 <li>
                    <p>Sneakers are very 
                     comfortable and well 
@@ -87,9 +87,9 @@
             </ul>
         </div>
       </section>
-      <section>
-        <h2>Order</h2>
-        <ul>
+      <section class="section-order">
+        <h2 class="name-order">Order</h2>
+        <ul class="list-order">
             <li><h4>Write your email</h4>
                 <p>Confirm</p>
             </li>
@@ -106,15 +106,15 @@
         <button type="button">Order my Nike</button>
       </section>
     </main>
-    <footer>
-        <div>
+    <footer class="footer">
+        <div class="div-footer">
             <ul>
             <li>Have a question?</li>
             <li>Have a proposal for cooperation?</li>
             <li>Advertising questions?</li>
             </ul>
-            <address>
-                <div>
+            <address class="address">
+                <div class="div-address">
                     <a href="ColoRawe_support@gmail.com">ColoRawe_support@gmail.com</a>
                     <a href="ColoRawe_Cooperation@gmail.com">ColoRawe_Cooperation@gmail.com</a>
                     <a href="ColoRawe_Advertising@gmail.com">ColoRawe_Advertising@gmail.com</a>
