--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <nav class="nav-list">
                 <ul class="header-list">
                     <li><a href="index.html"></a></li>
-                    <li>Main page</li>
-                    <li>Benefits</li>
-                    <li>Advantages</li>
-                    <li>Reviews</li>
-                    <li>Contacts</li>
-                    <li>Order</li>
+                    <li class="ul-items">Main page</li>
+                    <li class="ul-items">Benefits</li>
+                    <li class="ul-items">Advantages</li>
+                    <li class="ul-items">Reviews</li>
+                    <li class="ul-items">Contacts</li>
+                    <li class="ul-items">Order</li>
                 </ul>
             </nav>
             <ul class="language-list">
