--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header class="header">
         <div class="div-list">
             <nav class="nav-list">
+                <a href="index.html"><img src="images/logo.png" alt=""></a>
                 <ul class="header-list">
-                    <li><a href="index.html"></a></li>
                     <li class="ul-items">Main page</li>
                     <li class="ul-items">Benefits</li>
                     <li class="ul-items">Advantages</li>
@@ -27,7 +27,7 @@
             </nav>
             <ul class="language-list">
                 <li>
-                    <a href="#">Ua Eng</a>
+                    <a class="language" href="#">Ua Eng</a>
                 </li>
             </ul>
        </div>  
@@ -38,20 +38,20 @@
         <h1>ColoRawe</h1>
         <p>Your dream Nike<p>
         <p>On this site you can find custom Nike sneakers of your dreams. The original company caт`t create such beautiful sneakers as we do. Good luck finding your way in the world of custom sneakers.</p>
-        <button type="button">Buy my Nike</button>
+        <button class="header-button" type="button">Buy my Nike</button>
     </section>
     <section class="section-quality">
         <ul class="list-quality">
             <li>
-              <img src="" alt="">
+              <img src="images/star.png" alt="">
               <h2>Premium Quality</h2>
             </li>
             <li>
-              <img src="" alt="">
+              <img src="images/paint.png" alt="">
               <h2>Indelible paint</h2>
             </li>
             <li>
-              <img src="" alt="">
+              <img src="images/shipping.png" alt="">
               <h2>Fast shipping</h2>
             </li>
         </ul>
