--- a/index.html
+++ b/index.html
@@ -23,34 +23,37 @@
                     <li class="ul-items">Reviews</li>
                     <li class="ul-items">Contacts</li>
                     <li class="ul-items">Order</li>
+                    <li>
+                        <a class="language" href="#">Ua Eng</a>
+                    </li>
                 </ul>
             </nav>
-            <ul class="language-list">
-                <li>
-                    <a class="language" href="#">Ua Eng</a>
-                </li>
-            </ul>
+
        </div>  
     </header>
     <main class="main">
-     <section class="section-colorawe">
-        <p>C&R</p>
-        <h1>ColoRawe</h1>
-        <p>Your dream Nike<p>
-        <p>On this site you can find custom Nike sneakers of your dreams. The original company caт`t create such beautiful sneakers as we do. Good luck finding your way in the world of custom sneakers.</p>
+     <section class="section-colorawe ">
+        <a href="index.html"><img src="images/logo.png" alt=""></a>
+        <p class="name-logo">C&R</p>
+        <h1 class="h1-colorawe">ColoRawe</h1>
+        <p class="colorawe-Nike">Your dream Nike<p>
+        <p class="text-colorawe container">On this site you can find custom Nike sneakers of your dreams. The original company caт`t create such beautiful sneakers as we do. Good luck finding your way in the world of custom sneakers.</p>
         <button class="header-button" type="button">Buy my Nike</button>
     </section>
     <section class="section-quality">
+        
         <ul class="list-quality">
-            <li>
+            <li class="quality ">
               <img src="images/star.png" alt="">
               <h2>Premium Quality</h2>
+              <div class="line"></div>
             </li>
-            <li>
+            <li class="quality ">
               <img src="images/paint.png" alt="">
               <h2>Indelible paint</h2>
+              <div class="line"></div>
             </li>
-            <li>
+            <li class="quality">
               <img src="images/shipping.png" alt="">
               <h2>Fast shipping</h2>
             </li>
