--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header class="header">
         <div class="div-list">
             <nav class="nav-list">
-                <a href="index.html"><img src="images/logo.png" alt=""></a>
                 <ul class="header-list">
+                    <li><a href="index.html"><img class="logo" src="images/logo.png" alt=""></a></li>
                     <li class="ul-items">Main page</li>
                     <li class="ul-items">Benefits</li>
                     <li class="ul-items">Advantages</li>
@@ -32,12 +32,12 @@
        </div>  
     </header>
     <main class="main">
-     <section class="section-colorawe ">
+     <section class="section-colorawe">
         <a href="index.html"><img src="images/logo.png" alt=""></a>
         <p class="name-logo">C&R</p>
         <h1 class="h1-colorawe">ColoRawe</h1>
         <p class="colorawe-Nike">Your dream Nike<p>
-        <p class="text-colorawe container">On this site you can find custom Nike sneakers of your dreams. The original company caт`t create such beautiful sneakers as we do. Good luck finding your way in the world of custom sneakers.</p>
+        <p class="text-colorawe ">On this site you can find custom Nike sneakers of your dreams. The original company caт`t create such beautiful <br> sneakers as we do. <br> Good luck finding your way in the world of custom sneakers.</p>
         <button class="header-button" type="button">Buy my Nike</button>
     </section>
     <section class="section-quality">
