--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <div class="line"></div>
             </li>
             <li class="quality">
-              <img src="images/shipping.png" alt="">
+              <img src="images/delivery.png" alt="">
               <h2>Fast shipping</h2>
             </li>
         </ul>
