--- a/index.html
+++ b/index.html
@@ -7,41 +7,41 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Playfair+Display&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
-        <div class="div-list">
+        <div class="div-list container">
+            <a href="index.html"><img class="logo" src="images/logo.png" alt=""></a>
             <nav class="nav-list">
                 <ul class="header-list">
-                    <li><a href="index.html"><img class="logo" src="images/logo.png" alt=""></a></li>
                     <li class="ul-items">Main page</li>
                     <li class="ul-items">Benefits</li>
                     <li class="ul-items">Advantages</li>
                     <li class="ul-items">Reviews</li>
                     <li class="ul-items">Contacts</li>
                     <li class="ul-items">Order</li>
-                    <li>
-                        <a class="language" href="#">Ua Eng</a>
-                    </li>
                 </ul>
             </nav>
-
+            <ul>
+            <li><a class="language" href="#">Ua</a></li>
+            <li><a class="language" href="#">Eng</a></li>
+            </ul>
        </div>  
     </header>
     <main class="main">
-     <section class="section-colorawe">
-        <a href="index.html"><img src="images/logo.png" alt=""></a>
-        <p class="name-logo">C&R</p>
-        <h1 class="h1-colorawe">ColoRawe</h1>
-        <p class="colorawe-Nike">Your dream Nike<p>
-        <p class="text-colorawe ">On this site you can find custom Nike sneakers of your dreams. The original company caт`t create such beautiful <br> sneakers as we do. <br> Good luck finding your way in the world of custom sneakers.</p>
-        <button class="header-button" type="button">Buy my Nike</button>
+     <section class="section-colorawe ">
+        <div class="container"><a href="index.html"><img src="images/logo.png" alt=""></a>
+            <p class="name-logo">C&R</p>
+            <h1 class="h1-colorawe">ColoRawe</h1>
+            <p class="colorawe-Nike">Your dream Nike<p>
+            <p class="text-colorawe ">On this site you can find custom Nike sneakers of your dreams. The original company caт`t create such beautiful <br> sneakers as we do. <br> Good luck finding your way in the world of custom sneakers.</p>
+            <button class="header-button" type="button">Buy my Nike</button></div>
     </section>
     <section class="section-quality">
-        
+        <div class="container">
         <ul class="list-quality">
             <li class="quality ">
               <img src="images/star.png" alt="">
@@ -58,10 +58,11 @@
               <h2>Fast shipping</h2>
             </li>
         </ul>
+    </div>
     </section>
      </div>
       <section class="section-reviews">
-        <div>
+        <div class="container">
             <h2 class="name-reviews">Reviews</h2>
             <ul class="section-reviews">
                 <li>
@@ -90,27 +91,28 @@
             </ul>
         </div>
       </section>
-      <section class="section-order">
-        <h2 class="name-order">Order</h2>
-        <ul class="list-order">
-            <li><h4>Write your email</h4>
-                <p>Confirm</p>
-            </li>
-            <li>
-             <h4>Your Country</h4>
-            </li>
-            <li>
-              <h4>You City</h4>
-            </li>
-            <li>
-                <h4>Your Adress</h4>
-            </li>
-        </ul>
-        <button type="button">Order my Nike</button>
+      <section class="section-order ">
+        <div class="container">
+            <h2 class="name-order">Order</h2>
+            <ul class="list-order">
+                <li><h4>Write your email</h4>
+                    <p>Confirm</p>
+                </li>
+                <li>
+                 <h4>Your Country</h4>
+                </li>
+                <li>
+                  <h4>You City</h4>
+                </li>
+                <li>
+                    <h4>Your Adress</h4>
+                </li>
+            </ul>
+            <button type="button">Order my Nike</button></div>
       </section>
     </main>
-    <footer class="footer">
-        <div class="div-footer">
+    <footer class="footer ">
+        <div class="div-footer container">
             <ul>
             <li>Have a question?</li>
             <li>Have a proposal for cooperation?</li>
