--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li class="ul-items">Order</li>
                 </ul>
             </nav>
-            <ul>
+            <ul class="language-list">
             <li><a class="language" href="#">Ua</a></li>
             <li><a class="language" href="#">Eng</a></li>
             </ul>
@@ -111,7 +111,7 @@
             <button type="button">Order my Nike</button></div>
       </section>
     </main>
-    <footer class="footer ">
+    <footer class="footer">
         <div class="div-footer container">
             <ul>
             <li>Have a question?</li>
