--- a/index.html
+++ b/index.html
@@ -64,38 +64,49 @@
       <section class="section-reviews">
         <div class="container">
             <h2 class="name-reviews">Reviews</h2>
-            <ul class="section-reviews">
+            <ul class="ul-reviews">
+                <div class="div-background-john">
                 <li>
-                   <p>Sneakers are very 
+                   <p class="reviews-text">Sneakers are very 
                     comfortable and well 
                     painted, nothing has 
                     worn off in a year.</p>
-                    <p>25.11</p>
-                    <h5>John Teylor</h5>
-                    <p>With us from 2018</p>
+                    <p class="reviews-time">25.11</p>
+                    <img class="reviews-photo"src="images/john.png" alt="">
+                    <h5 class="reviews-name">John Teylor</h5>
+                    <p class="reviews-data">With us from 2018</p>
                 </li>
+            </div>
+            <div class="div-background-elizabeth">
                 <li>
-                    <p>I'm very happy with this color scheme.
+                    <p class="reviews-text">I'm very happy with this color scheme.
                         They match all my clothes.</p>
-                    <p>05.01</p>
-                    <h5>Elizabeth Garsia</h5>
-                    <p>With us from 2020</p>
+                    <p class="reviews-time">05.01</p>
+                    <img class="reviews-photo"src="images/elizabeth.png" alt="">
+                    <h5 class="reviews-name">Elizabeth Garsia</h5>
+                    <p class="reviews-data">With us from 2020</p>
                 </li>
+            </div>
+            <div class="div-background-tom">
                 <li>
-                    <p>Just right if you need to go to a party.
+                    <p class="reviews-text">Just right if you need to go to a party.<br>
                         I use them actively, the paint is super.</p>
-                    <p>18.06</p>
-                    <h5>Tom Maquare</h5>
-                    <p>With us from 2019</p>
+                    <p class="reviews-time">18.06</p>
+                    <img class="reviews-photo"src="images/tom.png" alt="">
+                    <h5 class="reviews-name">Tom Maquare</h5>
+                    <p class="reviews-data">With us from 2019</p>
                 </li>
+            </div>
             </ul>
         </div>
+        <img class="reviews-flowers" src="images/flowers.png" alt="">
       </section>
       <section class="section-order ">
         <div class="container">
             <h2 class="name-order">Order</h2>
             <ul class="list-order">
-                <li><h4>Write your email</h4>
+                <li>
+                    <h4>Write your email</h4>
                     <p>Confirm</p>
                 </li>
                 <li>
@@ -108,7 +119,7 @@
                     <h4>Your Adress</h4>
                 </li>
             </ul>
-            <button type="button">Order my Nike</button></div>
+            <button class="header-button" type="button">Order my Nike</button></div>
       </section>
     </main>
     <footer class="footer">
