--- a/index.html
+++ b/index.html
@@ -105,19 +105,27 @@
         <div class="container">
             <h2 class="name-order">Order</h2>
             <ul class="list-order">
+            <div class="big-order-ul">
                 <li>
                     <h4>Write your email</h4>
                     <p>Confirm</p>
                 </li>
+            </div>
+            <div class="order-ul">
                 <li>
                  <h4>Your Country</h4>
                 </li>
+            </div>
+            <div class="order-ul">
                 <li>
                   <h4>You City</h4>
                 </li>
+            </div>
+            <div class="order-ul">
                 <li>
                     <h4>Your Adress</h4>
                 </li>
+            </div>
             </ul>
             <button class="header-button" type="button">Order my Nike</button></div>
       </section>
@@ -136,7 +144,17 @@
                     <a href="ColoRawe_Advertising@gmail.com">ColoRawe_Advertising@gmail.com</a>
                 </div>
             </address>
-        </div>
+        <ul class="footer-colorawe">
+        <li>
+        <p>2022 ColoRawe @All rights reserved</p>
+        <p>United States</p>
+        </li>  
+        <li>
+         <a href="index.html"><img src="images/logo.png" alt=""></a>
+        <p>С&R</p>
+        </li>
+    </ul>
+   </div>
     </footer>
 </body>
 </html>
