--- a/index.html
+++ b/index.html
@@ -41,21 +41,19 @@
             <button class="header-button" type="button">Buy my Nike</button></div>
     </section>
     <section class="section-quality">
-        <div class="container">
+        <div class="quality-div container">
         <ul class="list-quality">
-            <li class="quality ">
-              <img src="images/star.png" alt="">
-              <h2>Premium Quality</h2>
-              <div class="line"></div>
-            </li>
-            <li class="quality ">
-              <img src="images/paint.png" alt="">
-              <h2>Indelible paint</h2>
-              <div class="line"></div>
+            <li class="quality">
+              <h2 class="premium">Premium<br>Quality</h2>
+              <img class="star" src="images/star.png" alt="">
             </li>
             <li class="quality">
-              <img src="images/delivery.png" alt="">
-              <h2>Fast shipping</h2>
+              <img class="Indelible" src="images/paint.png" alt="">
+              <h2 class="paint">Indelible<br>paint</h2>
+            </li>
+            <li class="quality">
+              <h2 class="shipping">Fast<br>shipping</h2>
+              <img class="delivery" src="images/delivery.png" alt="">
             </li>
         </ul>
     </div>
