--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
      </div>
       <section class="section-reviews">
         <div class="container">
-            <h2 class="name-reviews">Reviews</h2>
+            <h2 class="title">Reviews</h2>
             <ul class="ul-reviews">
                 <div class="div-background-john">
                 <li>
@@ -97,35 +97,18 @@
             </div>
             </ul>
         </div>
-        <img class="reviews-flowers" src="images/flowers.png" alt="">
       </section>
       <section class="section-order ">
         <div class="container">
-            <h2 class="name-order">Order</h2>
-            <ul class="list-order">
-            <div class="big-order-ul">
-                <li>
-                    <h4>Write your email</h4>
-                    <p>Confirm</p>
-                </li>
-            </div>
-            <div class="order-ul">
-                <li>
-                 <h4>Your Country</h4>
-                </li>
-            </div>
-            <div class="order-ul">
-                <li>
-                  <h4>You City</h4>
-                </li>
-            </div>
-            <div class="order-ul">
-                <li>
-                    <h4>Your Adress</h4>
-                </li>
-            </div>
-            </ul>
-            <button class="header-button" type="button">Order my Nike</button></div>
+            <h2 class="title">Order</h2>
+            <form action="">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <button class="header-button" type="button">Order my Nike</button>
+            </form>
+        </div>
       </section>
     </main>
     <footer class="footer">
