--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
       <section class="section-order ">
         <div class="container">
             <h2 class="title">Order</h2>
-            <form action="">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+            <form class="form-order" action="">
+                <input class="input-big-item" type="">
+                <input class="input-item" type="">
+                <input class="input-item" type="">
+                <input class="input-item" type="">
                 <button class="header-button" type="button">Order my Nike</button>
             </form>
         </div>
