--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
         <div class="container">
             <h2 class="title">Order</h2>
             <form class="form-order" action="">
-                <input class="input-big-item" type="">
-                <input class="input-item" type="">
-                <input class="input-item" type="">
-                <input class="input-item" type="">
-                <button class="header-button" type="button">Order my Nike</button>
+                <input class="input-big-item" type="" placeholder="Write your email                                                                                                               Confirm">
+                <input class="input-item" type="" placeholder="Your Country">
+                <input class="input-item" type="" placeholder="Your City">
+                <input class="input-item" type="" placeholder="Your Adress">
+                <button class="order-button" type="button">Order my Nike</button>
             </form>
         </div>
       </section>
