--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
     <section class="section-quality">
         <div class="quality-div container">
         <ul class="list-quality">
-            <li class="quality">
+            <li class="quality one">
               <h2 class="premium">Premium<br>Quality</h2>
               <img class="star" src="images/star.png" alt="">
             </li>
-            <li class="quality">
+            <li class="quality second">
               <img class="Indelible" src="images/paint.png" alt="">
               <h2 class="paint">Indelible<br>paint</h2>
             </li>
-            <li class="quality">
+            <li class="quality three">
               <h2 class="shipping">Fast<br>shipping</h2>
               <img class="delivery" src="images/delivery.png" alt="">
             </li>
