--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
     </main>
     <footer class="footer">
         <div class="div-footer container">
-            <ul>
+            <ul class="footer-ul">
             <li>Have a question?</li>
             <li>Have a proposal for cooperation?</li>
             <li>Advertising questions?</li>
             </ul>
             <address class="address">
                 <div class="div-address">
-                    <a href="ColoRawe_support@gmail.com">ColoRawe_support@gmail.com</a>
-                    <a href="ColoRawe_Cooperation@gmail.com">ColoRawe_Cooperation@gmail.com</a>
-                    <a href="ColoRawe_Advertising@gmail.com">ColoRawe_Advertising@gmail.com</a>
+                    <a class="first-child" href="ColoRawe_support@gmail.com">ColoRawe_support@gmail.com</a>
+                    <a href="ColoRawe_Cooperation@gmail.com"><br>ColoRawe_Cooperation@gmail.com</a>
+                    <a class="three-child" href="ColoRawe_Advertising@gmail.com"><br>ColoRawe_Advertising@gmail.com</a>
                 </div>
             </address>
         <ul class="footer-colorawe">
@@ -130,7 +130,7 @@
         <p>2022 ColoRawe @All rights reserved</p>
         <p>United States</p>
         </li>  
-        <li>
+        <li class="footer-colorawe-item">
          <a href="index.html"><img src="images/logo.png" alt=""></a>
         <p>С&R</p>
         </li>
