--- a/index.html
+++ b/index.html
@@ -111,41 +111,47 @@
       <section class="section-order "> 
         <div class="container"> 
             <h2 class="title">Order</h2> 
-            <form class="form-order" action=""> 
-                <input class="input-big-item" type="" placeholder="Write your email                                                                                                               Confirm"> 
-                <input class="input-item" type="" placeholder="Your Country"> 
-                <input class="input-item" type="" placeholder="Your City"> 
-                <input class="input-item" type="" placeholder="Your Adress"> 
+            <form class="form-order"> 
+                <input class="input-big-item" type="email" placeholder="Write your email                                                                                                               Confirm"> 
+                <input class="input-item" type="text" placeholder="Your Country"> 
+                <input class="input-item" type="text" placeholder="Your City"> 
+                <input class="input-item" type="text" placeholder="Your Adress"> 
                 <button class="order-button" type="button">Order my Nike</button> 
             </form> 
         </div> 
       </section> 
     </main> 
-    <footer class="footer">
-        <div class="div-footer container">
-            <ul class="footer-ul">
-            <li>Have a question?</li>
-            <li>Have a proposal for cooperation?</li>
-            <li>Advertising questions?</li>
-            </ul>
-            <address class="address">
-                <div class="div-address">
-                    <a class="first-child" href="ColoRawe_support@gmail.com">ColoRawe_support@gmail.com</a>
-                    <a href="ColoRawe_Cooperation@gmail.com"><br>ColoRawe_Cooperation@gmail.com</a>
-                    <a class="three-child" href="ColoRawe_Advertising@gmail.com"><br>ColoRawe_Advertising@gmail.com</a>
-                </div>
-            </address>
-        <ul class="footer-colorawe">
-        <li>
-        <p>2022 ColoRawe @All rights reserved</p>
-        <p>United States</p>
-        </li>  
-        <li class="footer-colorawe-item">
-         <a href="index.html"><img src="images/logo.png" alt=""></a>
-        <p>С&R</p>
-        </li>
-    </ul>
-   </div>
+    <footer class="footer">   
+        <div class="container">   
+            <div class="footer-wrap">   
+                <ul class="footer-left">   
+                    <li class="footer-text">Have a question?</li>   
+                    <li class="footer-text">Have a proposal for cooperation?</li>   
+                    <li class="footer-text">Advertising questions?</li>   
+                </ul>   
+                <ul class="footer-right">   
+                    <li class="footer-link">   
+                        <a class="footer-email" href="">ColoRawe_support@gmail.com</a>   
+                    </li>   
+                    <li class="footer-link">   
+                        <a class="footer-email" href="">ColoRawe_Cooperation@gmail.com</a>   
+                    </li>   
+                    <li class="footer-link">   
+                        <a class="footer-email" href="">ColoRawe_Advertising@gmail.com</a>   
+                    </li>   
+                </ul>   
+            </div>   
+            <div class="footer-wrapper">   
+                <ul>   
+                    <li><p class="footer-text">2022 ColoRawe @All rights reserved</p></li>   
+                    <li><p class="footer-text">United States</p></li>   
+                </ul>   
+                <ul>   
+                    <li><img src="images/logo.png" alt=""></li>   
+                    <li><p class="footer-title">С&R</p></li>   
+                </ul>   
+            </div>   
+        </div>   
     </footer>
 </body>
 </html>
